Implement anvil new command with profile support
- Add configuration system with anvil.toml parsing and saving
- Implement profile scaffolding logic for lib, cli, api, service, monorepo
- Create working anvil new command with profile validation
- Add TOML dependency for configuration handling
- Update tests to verify new command functionality
- Successfully scaffold test project with proper structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "tomli>=2.0.0; python_version < '3.11'",
     "watchdog>=3.0.0",
     "pyyaml>=6.0.0",
+    "tomli>=2.3.0",
 ]
 
 [project.urls]
