--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,24 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src/anvil"]
 
+[tool.hatch.build.targets.sdist]
+include = [
+    "/src",
+    "/tests",
+    "/README.md",
+    "/LICENSE",
+    "/pyproject.toml",
+]
+
+[tool.hatch.build.targets.binary]
+include = [
+    "/src",
+    "/README.md",
+    "/LICENSE",
+]
+sources = ["src"]
+artifacts = ["dist/"]
+
 [tool.uv]
 dev-dependencies = [
     "pytest>=7.0.0",
@@ -54,6 +72,7 @@ dev-dependencies = [
     "pre-commit>=3.0.0",
     "pyright>=1.1.0",
     "bandit>=1.7.0",
+    "pyinstaller>=6.0.0",
 ]
 
 [tool.bandit]
